--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.9.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
