--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.4",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
